[package]
name = "futures"
version = "0.1.0"
authors = ["bruno.pereira@orsegups.com.br <bruno.pereira@orsegups.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = { version = "0.3.*"}
tokio = {version = "0.2.*", features = ["full"] }
log = "0.4.*"
env_logger = "0.7.*"