[package]
name = "variable_bindings"
version = "0.1.0"
authors = ["bruno.pereira@orsegups.com.br <bruno.pereira@orsegups.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="*"
tokio-core="*"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }